# rustmud

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  REFACTOR_PLAN.md  docker-compose.yml  sync-dist.sh  test_game_systems.rs  web_vue_test.html
.claude/skills/: rust-mud-dev.md  txpike9-refactoring.md
data/: quest_main.csv  quest_xiushoucun.csv
data/equipment/: README.md  materials.json  recipes.json  suits.json  templates.json
data/quest/: reward.csv
data/world/: items_data.json  npcs_data.json  rooms_data.json  shops_data.json
docs/: ios_roadmap.md
examples/: test_equip.rs  test_equip_full.rs  test_rhai.rs
scripts/: extract_items.pike  extract_npcs.pike  extract_rooms.pike  extract_shops.pike  pike_to_json.py
src/: lib.rs  main.rs
src/core/: array.rs  error.rs  mapping.rs  mod.rs  object.rs  program.rs  value.rs
src/equip/: mod.rs
src/gamenv/: clone.rs  cmds.rs  combat_system.rs  d.rs  daemons.rs  data.rs  dialog_system.rs  efuns.rs  guild.rs  hidden_cmd.rs  inherit.rs  master.rs  mod.rs  player_state.rs  quest.rs  school.rs  shop_system.rs  user.rs
src/gamenv/clone/: item.rs  mod.rs  npc.rs
src/gamenv/cmds/: inventory.rs  learn.rs  look.rs  mod.rs  move_dir.rs  pk.rs  registry.rs  skills.rs
src/gamenv/combat/: combat.rs  mod.rs  skill.rs
src/gamenv/core/: command.rs  entity.rs  mod.rs  parser.rs  registry.rs
src/gamenv/entities/: character.rs  mod.rs  npc.rs  player.rs  room.rs
src/gamenv/http_api/: auth.rs  command_queue.rs  commands.rs  config.rs  handlers.rs  mod.rs  mud_output.rs  thread_manager.rs  utils.rs  virtual_conn.rs
src/gamenv/item/: armor.rs  equipment.rs  item.rs  medicine.rs  mod.rs  weapon.rs
src/gamenv/npc/: merchant.rs  mod.rs  monster.rs  npc.rs  trainer.rs
src/gamenv/output/: json.rs  mod.rs  mud.rs
src/gamenv/quest/: daemon.rs  types.rs
src/gamenv/single/: masters.rs  mod.rs
src/gamenv/traits/: composition.rs  daemon.rs  entity.rs  equip.rs  fight.rs  inventory.rs  mod.rs  movable.rs  skills.rs  talkable.rs
src/gamenv/world/: item.rs  loader.rs  mod.rs  npc.rs  room.rs  shop.rs
src/pikenv/: config.rs  conn.rs  connd.rs  efuns.rs  gc_manager.rs  mod.rs  pike_save.rs  pikenv.rs
src/rustenv/: conn.rs  connd.rs  efuns.rs  mod.rs  rustenv.rs
src/script/: mod.rs
web/: cbk.jsp  common.inc  dist  do.jsp  do.jsp.bak.20230901  do2.jsp  do_dark.jsp  entry.jsp  entrycheck.jsp  entrycheck_dark.jsp  error500.jsp  header1.inc  index.jsp  ip_exists.jsp  login_reg.jsp  login_reg2.jsp  main.jsp  pc.jsp  pc_dark.jsp  regnew.jsp  regnew.jsp.bak.20230820  regnew2.jsp  test.html  test_include.jsp  test_simple.jsp  txadd.jsp  txcbk.jsp  wait10.jsp  yzmpc.jsp  yzmregnew.jsp
web/WEB-INF/: web.xml
web/includes/: classical.css  game2026_enhanced.css  game2026_enhanced_dark.css  header.inc  intro_dark.css  translate-init.inc
web/web/web_vue/: index.html  manifest.json
web/web_vue/: README.md  build.js  index.html  index.jsp  manifest.json  package.json
web/web_vue/css/: app.css
web/web_vue/js/: app.js
(+40 files in other folders)
