[package]
name = "rustmud"
version = "0.1.0"
edition = "2021"
authors = ["TXPike9 Team"]
description = "A Rust MUD engine, 1:1 port of txpike9"

[lib]
name = "rustmud"
path = "src/lib.rs"

[[bin]]
name = "rustenv"
path = "src/main.rs"

[[bin]]
name = "test_game_systems"
path = "test_game_systems.rs"

[dependencies]
# 异步运行时 - 对应 Pike 的非阻塞 I/O
tokio = { version = "1.42", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }

# 序列化/反序列化 - 对应 Pike 的 save_object/restore_object
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# 数据库 - 对应 txpike9 的 MySQL
sqlx = { version = "0.8", features = ["runtime-tokio", "mysql", "chrono", "uuid"] }

# HTTP API - 对应 http_api.pike
axum = { version = "0.8", features = ["multipart", "ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs", "compression-gzip"] }

# 模板引擎 - 对应 VIEW 系统 (暂时注释，后续可集成)
# rinja = { version = "0.4", features = ["with-axum"] }

# 静态全局变量 - 用于命令注册表
lazy_static = "1.5"

# 工具库
chrono = "0.4"
uuid = { version = "1.11", features = ["v4", "serde"] }
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
log = "0.4"
once_cell = "1.20"
dashmap = "6.1"
async-trait = "0.1"
regex = "1.11"
rand = "0.8"

# 脚本引擎 - 对应 Pike 的动态代码执行
rhai = { version = "1.24", features = ["serde"] }

# 配置文件
config = "0.15"

[dev-dependencies]
criterion = "0.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
